<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nusa News</string>
    <string name="list_title">Top stories</string>
    <string name="list_subtitle">Indonesia</string>
    <string name="detail_title">News Detail</string>
    <string name="navigate_back">Navigate back</string>
    <string name="retry">Try again</string>
    <string name="feed_top_headlines">Top headlines</string>
    <string name="feed_everything">Everything</string>
    <string name="feed_selector">News feed</string>
    <string name="loading_articles">Finding today’s stories…</string>
    <string name="saved_articles_title">You’re reading saved stories</string>
...
